meu segundo commit

--- a/cadastro.html
+++ b/cadastro.html
@@ -11,7 +11,7 @@
 
 <div>
      <label>  Nome: </label> 
-     <input type="nome" placeholder="informe o nome"> </input> 
+     <input type="nome" placeholder="informe o nomee"> </input> 
 </div>
 
 <div>
