acrescenta o estado de TO como opcao

--- a/cadastro.html
+++ b/cadastro.html
@@ -11,12 +11,12 @@
 
 <div>
      <label>  Nome: </label> 
-     <input type="nome" placeholder="informe o nomee"> </input> 
+     <input type="nome" placeholder="informe o nome"> </input> 
 </div>
 
 <div>
       <label>  E-mail: </label> 
-      <input type="emai" placeholder="Ex.: bobão@gmail.com"> </input>
+      <input type="emai" placeholder="Ex.: babaca@gmail.com"> </input>
 </div>
 
 <div>
@@ -47,6 +47,7 @@
             		<option> DF </option>
             		<option> RJ </option>
             		<option> BA </option>
+            		<option> TO </option>
             
             </select>
 </div>
