acrescenta RS nos estados

--- a/cadastro.html
+++ b/cadastro.html
@@ -48,6 +48,7 @@
             		<option> RJ </option>
             		<option> BA </option>
             		<option> TO </option>
+            		<option> RS </option>
             
             </select>
 </div>
