--- a/cadastro.html
+++ b/cadastro.html
@@ -49,6 +49,7 @@
             		<option> BA </option>
             		<option> TO </option>
             		<option> RS </option>
+            		<option> MG </option>
             
             </select>
 </div>
