--- a/cadastro.html
+++ b/cadastro.html
@@ -50,6 +50,7 @@
             		<option> TO </option>
             		<option> RS </option>
             		<option> MG </option>
+            		<option> DF </option>
             
             </select>
 </div>
