--- a/cadastro.html
+++ b/cadastro.html
@@ -51,6 +51,8 @@
             		<option> RS </option>
             		<option> MG </option>
             		<option> DF </option>
+		        <option> PE </option>
+		    
             
             </select>
 </div>
